# my-website

./: .dockerignore  .editorconfig  .gitignore  .neoconf.json  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  docker-compose.yml  flake.nix  index.html  leptosfmt.toml  main-18bcc657b7dc6b43.css  main-1aa4380f8fb12db2.css  main-26e847d2bab9826e.css  main-351c3655f1baabd.css  main-5b71641b960fec64.css  main-67daaf92de369721.css  main-6dfe1304d0d2fcc1.css  main-8226d9e29817f5c5.css  main-85a493ac33c75e1b.css  main-8d105a059e96e236.css  main-e4cb508dbf490ef4.css  main-f0fb309cc0426bb7.css  my-website-121bbb6f261b76b.js  my-website-121bbb6f261b76b_bg.wasm  my-website-232035d80cf9a273.js  my-website-232035d80cf9a273_bg.wasm  my-website-23bf53ef0c3e9ef.js  my-website-23bf53ef0c3e9ef_bg.wasm  my-website-24f358fd6e2ca7.js  my-website-24f358fd6e2ca7_bg.wasm  my-website-6000c5657b311e53.js  my-website-6000c5657b311e53_bg.wasm  my-website-60f134f40704e7b3.js  my-website-60f134f40704e7b3_bg.wasm  my-website-7262134769218df6.js  my-website-7262134769218df6_bg.wasm  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-check.yml  deploy.yml  release.yml
doc/: errors.md
nginx/: nginx.conf
node_dependencies/: package.json  tailwind.config.js
node_dependencies/src/: main.css
src/: app.rs  app_router.rs  error_template.rs  fileserv.rs  lib.rs  main.rs  mod.rs  router.rs  state.rs
src/components/: body.rs  h1.rs  h2.rs  header.rs  mod.rs  navigation_menu.rs
src/components/atoms/: container.rs  link.rs  mod.rs  photo.rs  title.rs
src/components/atoms/container/: container.module.scss  mod.rs
src/components/atoms/icon/: icon.module.scss  mod.rs
src/components/atoms/photo/: mod.rs  photo.module.scss
src/components/atoms/title/: mod.rs  title.module.scss
src/components/molecules/: education.rs  mod.rs  social.rs  timerange_record.rs
src/components/molecules/contact/: contact.module.scss  mod.rs
src/components/molecules/cover_photo/: cover_photo.module.scss  mod.rs
src/components/molecules/icon_link/: icon_link.module.scss  mod.rs
src/components/molecules/period/: mod.rs  period.module.scss
src/components/molecules/spider/: mod.rs  spider.module.scss
src/components/organisms/: experties_card.rs  mod.rs  project_card.rs
src/components/organisms/carousel/: carousel.module.scss  mod.rs
src/components/organisms/experties_card/: experties_card.module.scss  experties_card.rs  mod.rs
src/components/organisms/project_card/: mod.rs  project_card.module.scss
src/components/pages/: about.rs  cover.rs  experties.rs  mod.rs  photo.rs  photo_gallery.rs  projects.rs
src/components/pages/cover/: cover.module.scss  mod.rs
src/components/templates/: about.rs  experties.rs  mod.rs  photo_gallery.rs  projects.rs
src/components/templates/about/: about.module.scss  mod.rs
src/components/templates/cover/: cover.module.scss  mod.rs
src/components/templates/experties/: experties.module.scss  experties.rs  mod.rs
src/components/templates/photos/: mod.rs  photos.module.scss
src/components/templates/projects/: mod.rs  projects.module.scss
src/pages/: about.rs  contact.rs  cover_letter.rs  index.rs  mod.rs  not_found.rs  portfolio.rs
src/pages/home/: about.rs  container.rs  education.rs  experties.rs  experties_card.rs  home.module.scss  home.rs  home_page.rs  info_card.rs  intro.module.scss  intro.rs  mod.rs  photos.rs  project_card.rs  projects.rs  socials.rs  test.module.scss  work.rs
src/pages/resume/: awards.rs  contact.rs  container.rs  education.rs  experience.rs  h2.rs  image.rs  languages.rs  links.rs  mod.rs  profile.rs  resume.rs  technologies.rs  title.rs
style/: animation.scss  global.scss  input.css  main.css  main.scss  stylance.scss  tailwind.css  variables.scss
